Update pop-style.css - bugfix for z-index

--- a/pop-style.css
+++ b/pop-style.css
@@ -11,6 +11,7 @@
   transform: rotate(315deg);
   width: 600px;
   height: 600px;
+  z-index: 9;
 }
 
 .date {
